--- a/SRC/NotesMan.dproj
+++ b/SRC/NotesMan.dproj
@@ -103,20 +103,21 @@
         <AppEnableRuntimeThemes>true</AppEnableRuntimeThemes>
         <AppDPIAwarenessMode>PerMonitorV2</AppDPIAwarenessMode>
         <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
-        <VerInfo_Release>7</VerInfo_Release>
+        <VerInfo_Release>8</VerInfo_Release>
         <VerInfo_Build>1</VerInfo_Build>
         <VerInfo_Locale>1033</VerInfo_Locale>
-        <VerInfo_Keys>CompanyName=VNM Software;FileDescription=NotesMan;FileVersion=1.2.7.1;InternalName=;LegalCopyright=VNM Software;LegalTrademarks=;OriginalFilename=NotesMan.exe;ProductName=$(MSBuildProjectName);ProductVersion=1.2.7.1;Comments=Simple &amp; portable notes managing app for windows.;ProgramID=com.vnmsoftware.$(MSBuildProjectName)</VerInfo_Keys>
+        <VerInfo_Keys>CompanyName=VNM Software;FileDescription=NotesMan;FileVersion=1.2.8.1;InternalName=;LegalCopyright=VNM Software;LegalTrademarks=;OriginalFilename=NotesMan.exe;ProductName=$(MSBuildProjectName);ProductVersion=1.2.8.1;Comments=Simple &amp; portable notes managing app for windows.;ProgramID=com.vnmsoftware.$(MSBuildProjectName)</VerInfo_Keys>
         <VerInfo_MinorVer>2</VerInfo_MinorVer>
+        <Icon_MainIcon>NotesMan_Icon.ico</Icon_MainIcon>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_1_Win64)'!=''">
         <AppEnableRuntimeThemes>true</AppEnableRuntimeThemes>
         <AppDPIAwarenessMode>PerMonitorV2</AppDPIAwarenessMode>
         <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
         <VerInfo_Locale>1033</VerInfo_Locale>
-        <VerInfo_Keys>CompanyName=VNM Software;FileDescription=NotesMan;FileVersion=1.2.7.1;InternalName=;LegalCopyright=VNM Software;LegalTrademarks=;OriginalFilename=NotesMan64.exe;ProgramID=com.vnmsoftware.$(MSBuildProjectName);ProductName=$(MSBuildProjectName);ProductVersion=1.2.7.1;Comments=Simple &amp; portable notes managing app for windows.</VerInfo_Keys>
+        <VerInfo_Keys>CompanyName=VNM Software;FileDescription=NotesMan;FileVersion=1.2.8.1;InternalName=;LegalCopyright=VNM Software;LegalTrademarks=;OriginalFilename=NotesMan64.exe;ProgramID=com.vnmsoftware.$(MSBuildProjectName);ProductName=$(MSBuildProjectName);ProductVersion=1.2.8.1;Comments=Simple &amp; portable notes managing app for windows.</VerInfo_Keys>
         <Icon_MainIcon>NotesMan_Icon1.ico</Icon_MainIcon>
-        <VerInfo_Release>7</VerInfo_Release>
+        <VerInfo_Release>8</VerInfo_Release>
         <VerInfo_Build>1</VerInfo_Build>
         <VerInfo_MinorVer>2</VerInfo_MinorVer>
     </PropertyGroup>
